# argparser

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  config.cmake.in  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ubuntu.yml
cmake/toolchains/: x64-windows-llvm.toolchain.cmake
cmake/triplets/: x64-windows-llvm.cmake
include/buracchi/argparser/: argparser.h  argument-action-store.h  exit.h  sub-commands.h  types.h
src/: actions.c  argparser.c  arguments.c  arguments.h  help.c  parser.c  struct_argparser.h  subcommands.c  usage.c  utils.c  utils.h
test/: CMakeLists.txt  argparser.c  argparser.cpp  main-mock.c
